refs #147: GDScript codeblocks are now highlighted in documentation site. Added support for ancillary languages that may come in handy (md, bash, yaml, json, dockerfile, makefile).

--- a/docs/content/_assets/css/custom.css
+++ b/docs/content/_assets/css/custom.css
@@ -805,6 +805,10 @@ code,
     border: none;
     border-radius: 4px;
 }
+.rst-content pre code {
+    color: inherit;
+    background-color: var(--code-background-color);
+}
 
 .rst-content tt.literal,
 .rst-content code.literal {
